--- a/pdftool/templates/merge.html
+++ b/pdftool/templates/merge.html
@@ -4,7 +4,7 @@
 
 <form method="POST" action="{{ reverse_url('Merge') }}" enctype="multipart/form-data" class="dropzone">
   <input type="file" name="pdfs" multiple/>
-  <input type="submit" value="Fusionner les pdfs" id="submit-all"/>
+  <input type="submit" value="Merge the pdfs" id="submit-all"/>
 </form>
 
 {% end %}
