--- a/pdftool/templates/_layout.html
+++ b/pdftool/templates/_layout.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
 
     <link href="{{ static_url('style.css') }}" rel="stylesheet" type="text/css">
+    <link href="{{ static_url('css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
     <!-- <link href="{{ static_url('dropzone.css') }}" rel="stylesheet" type="text/css"> -->
   </head>
   <body {% if options.debug %}data-debug="true"{% end %}>
