--- a/pdftool/templates/merge.html
+++ b/pdftool/templates/merge.html
@@ -2,9 +2,15 @@
 
 {% block main %}
 
-<form method="POST" action="{{ reverse_url('Merge') }}" enctype="multipart/form-data" class="dropzone">
-  <input type="file" name="pdfs" multiple/>
-  <input type="submit" value="Merge the pdfs" id="submit-all"/>
-</form>
+<div id="files">
+  <p id="drop">Drop your files here</p>
+</div>
+
+<a id="url" href="#">Download the result !</a>
+<!-- <form method="POST" action="{{ reverse_url('Merge') }}" enctype="multipart/form-data" class="dropzone"> -->
+<!--   <input type="file" name="pdfs[]" id="files" multiple/> -->
+<!--   <input type="submit" value="Merge the pdfs" id="submit-all"/> -->
+<!-- </form> -->
+<input type="button" value="Drop the sauce"  id="upload-button" data-url="{{ reverse_url('Merge') }}"/>
 
 {% end %}
