--- a/pdftool/templates/_layout.html
+++ b/pdftool/templates/_layout.html
@@ -24,6 +24,6 @@
       {% block main %}{% end %}
     </main>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="{{ static_url('js/pdftool.js') }}"></script>
+    <script src="{{ static_url('js/pdftool.min.js') }}"></script>
   </body>
 </html>
