--- a/pdftool/templates/merge.html
+++ b/pdftool/templates/merge.html
@@ -3,7 +3,9 @@
 {% block main %}
 
 <div id="files">
-  <p id="drop">Drop your files here</p>
+  <ul id="sortable">
+    <li id="drop">Drop your files here</li>
+  </ul>
 </div>
 
 <img id="loading" src="{{ static_url('images/ajax-loader.gif') }}" alt="loading"/>
