--- a/pdftool/templates/index.html
+++ b/pdftool/templates/index.html
@@ -1,6 +1,16 @@
 {% extends _layout.html %}
 
 {% block main %}
-<h1>Welcome to the online pdf tool</h1>
+
+<div id="files">
+  <ul id="sortable">
+    <li id="drop">Drop your files here</li>
+  </ul>
+</div>
+
+<img id="loading" src="{{ static_url('images/ajax-loader.gif') }}" alt="loading"/>
+
+<a id="url" href="#">Download the result !</a>
+<input type="button" value="Merge the pdfs !"  id="upload-button" data-url="{{ reverse_url('Merge') }}" data-preview-url="{{ reverse_url('Preview') }}"/>
+
 {% end %}
-Hello Word
