--- a/pdftool/templates/index.html
+++ b/pdftool/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block main %}
 
-<input type="file" name="files" id="hidden-uploader"/>
+<input type="file" name="files" id="hidden-uploader" multiple="multiple"/>
 <div id="files">
   <ul id="sortable">
     <li id="drop">Drop your files here</li>
