Add a progress bar, not sure this works in production though

--- a/pdftool/templates/_layout.html
+++ b/pdftool/templates/_layout.html
@@ -4,10 +4,10 @@
   <head>
     <title>PDFTool</title>
     <meta charset="utf-8">
-
     <link href="{{ static_url('css/pdftool.css') }}" rel="stylesheet" type="text/css">
     <link href="{{ static_url('css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
     <link href="{{ static_url('css/magnific-popup.css') }}" rel="stylesheet" type="text/css">
+    <link href="{{ static_url('css/jquery-ui.css') }}" rel="stylesheet" type="text/css">
   </head>
   <body {% if options.debug %}data-debug="true"{% end %}>
     <h1>PDFTool</h1>
