--- a/pdftool/static/css/pdftool.css
+++ b/pdftool/static/css/pdftool.css
@@ -65,3 +65,14 @@ li i.fa-undo {
 .thumbnail {
   width: 50px;
 }
+
+#completion {
+  position: relative;
+}
+
+#progress-label {
+  margin: 0 auto;
+  position: absolute;
+  top: 10px;
+  left: 50%;
+}
