--- a/pdftool/templates/index.html
+++ b/pdftool/templates/index.html
@@ -14,4 +14,6 @@
 <a id="url" href="#">Download the result !</a>
 <input type="button" value="Merge the pdfs !"  id="upload-button" data-url="{{ reverse_url('Merge') }}" data-preview-url="{{ reverse_url('Preview') }}"/>
 
+<div id="completion"><div id="progress-label"></div></div>
+
 {% end %}
