--- a/pdftool/templates/_layout.html
+++ b/pdftool/templates/_layout.html
@@ -4,7 +4,7 @@
   <head>
     <title>PDFTool</title>
     <meta charset="utf-8">
-
+    <link href="http://fonts.googleapis.com/css?family=Luckiest+Guy|Roboto" rel='stylesheet' type='text/css'>
     <link href="{{ static_url('css/pdftool.css') }}" rel="stylesheet" type="text/css">
     <link href="{{ static_url('css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
   </head>
