--- a/pdftool/templates/index.html
+++ b/pdftool/templates/index.html
@@ -11,6 +11,6 @@
 <img id="loading" src="{{ static_url('images/ajax-loader.gif') }}" alt="loading"/>
 
 <a id="url" href="#">Download the result !</a>
-<input type="button" value="Merge the pdfs !"  id="upload-button" data-url="{{ reverse_url('Merge') }}" data-preview-url="{{ reverse_url('Preview') }}"/>
+<input type="button" value="Work the magic !"  id="upload-button" data-url="{{ reverse_url('Merge') }}" data-preview-url="{{ reverse_url('Preview') }}"/>
 
 {% end %}
