Clicking on the default text now opens the file chooser popup

--- a/pdftool/static/css/pdftool.css
+++ b/pdftool/static/css/pdftool.css
@@ -1,78 +1,78 @@
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Luckiest Guy', cursive;
+  font-family: 'Luckiest Guy', cursive;
 }
 
 h1 {
-    font-size: 40pt;
+  font-size: 40pt;
 }
 
 body {
-    font-family: 'Roboto', serif;
+  font-family: 'Roboto', serif;
 }
 
 #files {
-    border: 2px dotted #aaa;
-    z-index: 1;
+  border: 2px dotted #aaa;
+  position: relative;
 }
 
 #drop {
-    color: grey;
-    font-size: 22pt;
-    pointer-events: none;
-    text-align: center;
-    list-style-type: none;
-    z-index: -1;
+  color: grey;
+  font-size: 22pt;
+  pointer-events: none;
+  text-align: center;
+  list-style-type: none;
+  z-index: -1;
 }
 
 .pdf_thumbnail {
-    border: 1px dotted black;
-    display: inline-block;
-    margin: 5px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    position: relative;
+  border: 1px dotted black;
+  display: inline-block;
+  margin: 5px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  position: relative;
 }
 
 #loading {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
 }
 
 #upload-button {
-    border: none;
-    border-radius: 4px;
-    background-color: #FF5722;
-    color: white;
-    cursor: pointer;
-    display: block;
-    font-size: 12pt;
-    font-weight: bold;
-    margin: 20px auto 0;
-    padding: 20px;
-    width: 30%
+  border: none;
+  border-radius: 4px;
+  background-color: #FF5722;
+  color: white;
+  cursor: pointer;
+  display: block;
+  font-size: 12pt;
+  font-weight: bold;
+  margin: 20px auto 0;
+  padding: 20px;
+  width: 30%
 }
 
 #sortable {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 li i.fa-minus-square, li i.fa-repeat, li i.fa-undo {
-    position: absolute;
-    top: 0;
+  position: absolute;
+  top: 0;
 }
 
 li i.fa-minus-square {
-    right: 0
+  right: 0
 }
 
 li i.fa-repeat {
-    left: 20px;
+  left: 20px;
 }
 
 li i.fa-undo {
-    left: 0;
+  left: 0;
 }
 
 #hidden-uploader {
@@ -105,4 +105,9 @@ li i.fa-undo {
 
 #url img {
   width: 100%;
+}
+
+#dummy-wrapper {
+  position: relative;
+  z-index: -1;
 }
