--- a/pdftool/templates/index.html
+++ b/pdftool/templates/index.html
@@ -10,7 +10,11 @@
   </ul>
 </div>
 
-<img id="loading" src="{{ static_url('images/ajax-loader.gif') }}" alt="loading"/>
+<div class="loading">
+  <svg class="circular">
+    <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
+  </svg>
+</div>
 
 <a id="url" href="#">
   <img src="{{ static_url('images/download.png') }}" alt="download" />
